--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.7",
+    "@types/nodemailer": "^6.4.0",
     "appointment": "^0.0.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.11",
     "pg": "^8.3.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
