--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/nodemailer": "^6.4.0",
     "appointment": "^0.0.2",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.3.1",
     "cors": "^2.8.5",
     "date-fns": "^2.15.0",
     "express": "^4.17.1",
