--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/cors": "^2.8.7",
+    "@types/hapi__joi": "^17.1.6",
+    "@types/ioredis": "^4.17.4",
     "@types/nodemailer": "^6.4.0",
     "appointment": "^0.0.2",
+    "aws-sdk": "^2.766.0",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^13.0.3",
     "class-transformer": "^0.3.1",
     "cors": "^2.8.5",
     "date-fns": "^2.15.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.2",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.11",
@@ -37,6 +45,7 @@
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.13",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.5.27",
     "@types/multer": "^1.4.4",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
