--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,10 @@
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
     "no-useless-constructor": "off",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error"
+    ],
     "camelcase": "off",
     "@typescript-eslint/camelcase": [
       "warn"
