--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "celebrate": "^13.0.3",
     "class-transformer": "^0.3.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "date-fns": "^2.15.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -29,6 +30,7 @@
     "handlebars": "^4.7.6",
     "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.6",
     "mongodb": "^3.6.2",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
