--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/hapi__joi": "^17.1.6",
     "@types/ioredis": "^4.17.4",
     "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.27",
     "appointment": "^0.0.2",
     "aws-sdk": "^2.766.0",
     "bcryptjs": "^2.4.3",
@@ -36,6 +37,8 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.11",
     "pg": "^8.3.2",
+    "rate-limiter-flexible": "^2.1.10",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25",
