--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -9,16 +9,15 @@ jobs:
     runs-on: ubuntu-latest 
 
     steps:
-      - name: Setup repo
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.2
         with:
           node-version: 12.x
           
-       # Instalar as dependências NPM/Yarn
-      - name: Install dependências
+      # Instalar as dependências NPM/Yarn
+      - name: Install dependencies
          run: yarn
       
       # Executar a build
