--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -25,7 +25,8 @@ jobs:
          run: yarn build
          
       - name: Copy dist to Digital Ocean
-        uses: appleboy/scp-action@master with:
+        uses: appleboy/scp-action@master
+      with:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USER}}
         port: ${{ secrets.SSH_PORT }}
