--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -18,7 +18,7 @@ jobs:
           
       # Instalar as dependências NPM/Yarn
       - name: Install dependencies
-         run: yarn
+         run: yarn build
       
       # Executar a build
       - name: Run build
@@ -26,10 +26,10 @@ jobs:
          
       - name: Copy dist to Digital Ocean
         uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USER}}
-        port: ${{ secrets.SSH_PORT }}
-        key: ${{ secrets.SSH_KEY }}
-        source: "dist"
-        target: "test"
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER}}
+          port: ${{ secrets.SSH_PORT }}
+          key: ${{ secrets.SSH_KEY }}
+          source: "dist"
+          target: "test"
