--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -1,8 +1,8 @@
-name: Deno
+name: CI
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]
 
 jobs:
   build:
@@ -12,17 +12,17 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup Node.js environment
-        uses: actions/setup-node@v2.1.2
+        uses: actions/setup-node@v1.4.2
         with:
-          node-version: 12.x
-          
+          node-version: 12.x 
+      
       # Instalar as dependências NPM/Yarn
       - name: Install dependencies
-         run: yarn build
-      
+        run: yarn
+          
       # Executar a build
       - name: Run build
-         run: yarn build
+        run: yarn build
          
       - name: Copy dist to Digital Ocean
         uses: appleboy/scp-action@master
