--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -44,23 +44,5 @@ jobs:
           script: | 
             cd ~/app/node-deploy
             yarn
-            
-      - name: Run migrations on Digital Ocen
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER}}
-          port: ${{ secrets.SSH_PORT }}
-          key: ${{ secrets.SSH_KEY }}
-          script: | 
-            cd ~/app/node-deploy
             ./node_modules/.bin/typeorm migration:run
-            
-      - name: Restart api
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER}}
-          port: ${{ secrets.SSH_PORT }}
-          key: ${{ secrets.SSH_KEY }}
-          script: pm2 restart gobarber-api  
+            pm2 restart gobarber-api  
