--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -34,8 +34,8 @@ jobs:
           source: ".,!node_modules"
           target: "~/app/node-deploy"
           
-      - name: Install dependencies on Diital Ocean
-        uses: appleboy/scp-action@master
+      - name: Install dependencies on Digital Ocean
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER}}
